<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Cvitok</string>


    <string name="menu_settings">Settings</string>
    <string name="menu_files_save">Save</string>
    <string name="menu_files_load">Load</string>
    <string name="menu_files_new">New Empty</string>
    <string name="menu_files_new_random">New Random</string>

    <string name="flower">Flower</string>
    <string name="petal">Petal</string>

    <string name="dialog_petal_name_title">Name of petal</string>
    <string name="msg_input_name">Input name</string>
    <string name="msg_petal_exists">Petal with the same name already exists</string>
    <string name="dialog_delete_petal_title">Delete petal?</string>

    <string name="dialog_files_title">Files</string>
    <string name="dialog_files_not_found">Not found</string>
    <string name="toast_file_corrupted" translatable="false">The file is corrupted</string>

    <string name="toast_file_exists">File with the same name already exists</string>
    <string name="dialog_flower_name_title">Name of flower</string>
    <string name="dialog_delete_file_title" translatable="false">Delete file?</string>
    <string name="toast_file_deleted">File deleted</string>
    <string name="dialog_file_delete">Delete</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="Ok">OK</string>
    <string name="Cancel">Cancel</string>

    <string name="dialog_color_title">Choice color</string>

    <string name="dialog_vertices_title">Choice Of Vertices</string>
    <string name="dialog_vertices_checkBox_tip">Tip</string>
    <string name="dialog_vertices_checkBox_upside">UpSide</string>
    <string name="dialog_vertices_checkBox_downside">DownSide</string>
    <string name="dialog_vertices_checkBox_foot">Foot</string>

    <string name="fragment_light_button_ambient">am</string>
    <string name="fragment_light_button_diffuse">di</string>
    <string name="fragment_light_button_specular">sp</string>

    <string name="fragment_flower_background">Background</string>
    <string name="fragment_flower_petals">Petals</string>
    <string name="fragment_flower_light">Light</string>

    <string name="actionBar_imageButton_generate_description" translatable="false">Generate</string>
    <string name="actionBar_imageButton_screenshot_description" translatable="false">ScreenShot</string>
    <string name="actionBar_imageButton_repaint_description" translatable="false">Repaint</string>
    <string name="toast_screenshot_error">Error writing to the SD card</string>
    <string name="des_share" translatable="false">Share</string>
    <string name="screenshot">Screenshot</string>
    <string name="screenshot_saved">Screenshot was saved in gallery</string>
    <string name="drawer_open" translatable="false">open</string>
    <string name="drawer_close" translatable="false">close</string>
    <string name="generator_button_build">Generate</string>
    <string name="bokeh_desc">Automatically generated flowers</string>

    <!--Color Dialog-->
    <string name="color_dialog_value_postfix" translatable="false">%</string>
    <string name="color_dialog_field">Color</string>
    <string name="color_dialog_description_red">Red</string>
    <string name="color_dialog_description_green">Green</string>
    <string name="color_dialog_description_blue">Blue</string>
    <string name="color_dialog_description_transparency">Transparency</string>
    <string name="control_button_des" translatable="false">Control button</string>
    <string name="pref_light_title">Light</string>


</resources>
