<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:my="http://schemas.android.com/apk/res/net.vc9ufi.cvitok"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/color_dialog_field"
            android:id="@+id/colorTextView"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>
    <net.vc9ufi.cvitok.views.customviews.DecoratedSeekBar
            android:id="@+id/redSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            my:description="@string/color_dialog_description_red"
            my:minValue="0"
            my:maxValue="100"
            my:defValue="30"
            my:postfix="@string/color_dialog_value_postfix"/>
    <net.vc9ufi.cvitok.views.customviews.DecoratedSeekBar
            android:id="@+id/greenSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            my:description="@string/color_dialog_description_green"
            my:minValue="0"
            my:maxValue="100"
            my:defValue="50"
            my:postfix="@string/color_dialog_value_postfix"/>
    <net.vc9ufi.cvitok.views.customviews.DecoratedSeekBar
            android:id="@+id/blueSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            my:description="@string/color_dialog_description_blue"
            my:minValue="0"
            my:maxValue="100"
            my:defValue="70"
            my:postfix="@string/color_dialog_value_postfix"/>
    <net.vc9ufi.cvitok.views.customviews.DecoratedSeekBar
            android:id="@+id/transparencySeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            my:description="@string/color_dialog_description_transparency"
            my:minValue="0"
            my:maxValue="100"
            my:defValue="0"
            my:postfix="@string/color_dialog_value_postfix"/>
</LinearLayout>