<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/screenshot_imageView"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/screenshot"
            android:layout_above="@+id/layout_buttons"/>
    <LinearLayout
            android:id="@+id/layout_buttons"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true">
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Ok"
                android:id="@+id/screenshot_button_ok"
                android:layout_weight="1"/>
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/screenshot_button_share"
                android:src="@android:drawable/ic_menu_share"
                android:layout_weight="1"
                android:contentDescription="@string/des_share"/>
    </LinearLayout>
</RelativeLayout>