<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:my="http://schemas.android.com/apk/res/net.vc9ufi.cvitok"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/color_dialog_description_red"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>
    <net.vc9ufi.cvitok.views.customviews.seekbars.DecoratedIntRangeSeekBar
            android:id="@+id/redRangeSeekBar"
            my:textSize="14sp"
            my:textColor="0xFFFFFFFF"
            my:postfix="@string/color_dialog_value_postfix"
            my:activeLineWidth="4dp"
            my:inactiveLineWidth="1dp"
            my:showMinMax="false"
            my:defFirstValue="80"
            my:defSecondValue="100"
            my:minValue="0"
            my:maxValue="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/color_dialog_description_green"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>
    <net.vc9ufi.cvitok.views.customviews.seekbars.DecoratedIntRangeSeekBar
            android:id="@+id/greenRangeSeekBar"
            my:textSize="14sp"
            my:textColor="0xFFFFFFFF"
            my:postfix="@string/color_dialog_value_postfix"
            my:activeLineWidth="4dp"
            my:inactiveLineWidth="1dp"
            my:showMinMax="false"
            my:defFirstValue="40"
            my:defSecondValue="60"
            my:minValue="0"
            my:maxValue="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/color_dialog_description_blue"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>
    <net.vc9ufi.cvitok.views.customviews.seekbars.DecoratedIntRangeSeekBar
            android:id="@+id/blueRangeSeekBar"
            my:textSize="14sp"
            my:textColor="0xFFFFFFFF"
            my:postfix="@string/color_dialog_value_postfix"
            my:activeLineWidth="4dp"
            my:inactiveLineWidth="1dp"
            my:showMinMax="false"
            my:defFirstValue="0"
            my:defSecondValue="20"
            my:minValue="0"
            my:maxValue="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

</LinearLayout>