<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_vertices_checkBox_tip"
            android:id="@+id/cofv_checkbox_tip"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
    <RelativeLayout
            android:id="@+id/cofv_layout_upside"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/cofv_checkbox_tip"
            android:layout_centerHorizontal="true">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/cofv_checkbox_left_upside"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_vertices_checkBox_upside"
                android:id="@+id/cofv_button_upside"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/cofv_checkbox_left_upside"
                android:layout_toLeftOf="@+id/cofv_checkbox_right_upside"/>
        <CheckBox android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text=""
                  android:id="@+id/cofv_checkbox_right_upside"
                  android:layout_centerVertical="true"
                  android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/cofv_layout_downside"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/cofv_layout_upside"
            android:layout_centerHorizontal="true">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/cofv_checkbox_left_downside"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_vertices_checkBox_downside"
                android:id="@+id/cofv_button_downside"
                android:layout_toRightOf="@+id/cofv_checkbox_left_downside"
                android:layout_toLeftOf="@+id/cofv_checkbox_right_downside"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/cofv_checkbox_right_downside"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/cofv_layout_foot"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/cofv_layout_downside"
            android:layout_centerHorizontal="true">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/cofv_checkbox_left_foot"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_vertices_checkBox_foot"
                android:id="@+id/cofv_button_foot"
                android:layout_toRightOf="@+id/cofv_checkbox_left_foot"
                android:layout_toLeftOf="@+id/cofv_checkbox_right_foot"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/cofv_checkbox_right_foot"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>
</RelativeLayout>